adds rule based symbolic seasoning

--- a/_config.yml
+++ b/_config.yml
@@ -31,8 +31,12 @@ github_username: lochbrunner
 
 # Build settings
 theme: minima
-plugins:
-  []
+plugins: []
+defaults:
+  - scope:
+      path: "assets"
+    values:
+      image: true
   # - jekyll-feed
 # Exclude from processing.
 # The following items will not be processed, by default.
