update stats and change tags color

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Matthias Lochbrunner
 email: matthias_lochbrunner@web.de
 description: >- # this means to ignore newlines until "baseurl:"
-  A collection of some projects.
+  About me, my projects, and thoughts.
 
 
 baseurl: "" # the subpath of your site, e.g. /blog
